# decom

./: Cargo.toml  LICENSE  README.md
decom-cli/: Cargo.toml
decom-cli/src/: main.rs
decom-core/: Cargo.toml
decom-core/src/: lib.rs  log_collector.rs
flaterm/: Cargo.toml  README.md
flaterm-example/: Cargo.toml
flaterm-example/src/: main.rs
flaterm-macro/: Cargo.toml
flaterm-macro/src/: children.rs  layout.rs  lib.rs  node.rs  props.rs  tag.rs
flaterm-macro/tests/: Cargo.template.toml  attribute.rs  attribute.stdout  basic_layout.rs  basic_layout.stdout  layout_macro_test.rs  nested_layout.rs  nested_layout.stdout  node.rs  node.stdout  test.rs
flaterm-test/: Cargo.toml
flaterm-test/src/: main.rs
flaterm/src/: direction.rs  layout_planner.rs  lib.rs  main.rs  node.rs  prop_value.rs  rect.rs
flaterm/src/renderer/: flat_impl.rs  mod.rs  tui_impl.rs
macro-harness/: Cargo.toml  README.md
macro-harness/src/: cargo.rs  diff.rs  helper.rs  lib.rs  manifest.rs  path.rs
src/: docker.rs  docker_compose.rs  log_collector.rs  main.rs
