[package]
name = "decom"
version = "0.0.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.15"
tokio = { version = "1.8.0", features = ["full"] }
tokio-util = { version = "0.6.7", features = ["codec"] }
