[package]
name = "decom"
version = "0.0.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossbeam = "0.8.1"
futures = "0.3.15"
tokio = { version = "1.8.2", features = ["full"] }
tokio-util = { version = "0.6.7", features = ["codec"] }
