[package]
name = "decom-cli"
version = "0.0.0"
authors = ["Yuki Kodama<endflow.net@gmail.com>"]
repository = "https://github.com/kuy/decom"
homepage = "https://github.com/kuy/decom"
edition = "2018"

[dependencies]
crossbeam = "0.8.1"
crossterm = "0.23.0"
decom-core = { path = "../decom-core" }
futures = "0.3.21"
tokio = { version = "1.17.0", features = ["full"] }
tokio-util = { version = "0.7.0", features = ["codec"] }
tui = { version = "0.16.0", default-features = false, features = ["crossterm"] }
