[package]
name = "decom-cli"
version = "0.0.0"
authors = ["Yuki Kodama<endflow.net@gmail.com>"]
repository = "https://github.com/kuy/decom"
homepage = "https://github.com/kuy/decom"
edition = "2018"

[dependencies]
crossbeam = "0.8.2"
crossterm = "0.26.1"
decom-core = { path = "../decom-core" }
futures = "0.3.28"
tokio = { version = "1.32.0", features = ["full"] }
tokio-util = { version = "0.7.8", features = ["codec"] }
tui = { version = "0.16.0", default-features = false, features = ["crossterm"] }
