[package]
name = "decom-core"
version = "0.0.0"
authors = ["Yuki Kodama<endflow.net@gmail.com>"]
repository = "https://github.com/kuy/decom"
homepage = "https://github.com/kuy/decom"
edition = "2018"

[dependencies]
crossbeam = "0.8.2"
futures = "0.3.28"
tokio = { version = "1.29.1", features = ["full"] }
tokio-util = { version = "0.7.8", features = ["codec"] }
