[package]
name = "flaterm-macro"
version = "0.0.0"
authors = ["Yuki Kodama<endflow.net@gmail.com>"]
repository = "https://github.com/kuy/decom"
homepage = "https://github.com/kuy/decom"
edition = "2018"

[lib]
proc-macro = true

[dependencies]
boolinator = "2.4.0"
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "1.0", features = ["extra-traits"] }

[dev-dependencies]
flaterm = { path = "../flaterm" }
macro-harness = { path = "../macro-harness" }
