[package]
name = "flaterm"
version = "0.0.0"
authors = ["Yuki Kodama<endflow.net@gmail.com>"]
repository = "https://github.com/kuy/decom"
homepage = "https://github.com/kuy/decom"
edition = "2018"

[dependencies]
crossterm = { version = "0.23.2", optional = true }
tui = { version = "0.16.0", default-features = false, features = ["crossterm"], optional = true }

[features]
default = ["with-flat"]
with-tui = ["tui", "crossterm"]
with-flat = ["crossterm"]
