[package]
name = "macro-harness"
version = "0.0.0"
authors = ["Yuki Kodama<endflow.net@gmail.com>"]
repository = "https://github.com/kuy/decom"
homepage = "https://github.com/kuy/decom"
edition = "2018"

[dependencies]
anyhow = "1.0"
cargo_toml = "0.9.2"
console = "0.14"
rand = "0.8.4"
similar = { version = "1.3", features = ["inline"] }
toml = "0.5.8"
